RESOLVED FIXED306078
Address unsafe cast warnings under Source/WebCore/bindings
https://bugs.webkit.org/show_bug.cgi?id=306078
Summary Address unsafe cast warnings under Source/WebCore/bindings
Chris Dumez
Reported 2026-01-22 16:57:39 PST
Address unsafe cast warnings under Source/WebCore/bindings.
Attachments
Chris Dumez
Comment 1 2026-01-22 16:59:40 PST
EWS
Comment 2 2026-01-23 02:33:07 PST
merge-queue failed to commit PR to repository. To retry, remove any blocking labels and re-apply merge-queue label
EWS
Comment 3 2026-01-23 03:38:07 PST
Committed 306070@main (2edd75b26b45): <https://commits.webkit.org/306070@main> Reviewed commits have been landed. Closing PR #57090 and removing active labels.
Radar WebKit Bug Importer
Comment 4 2026-01-23 03:39:13 PST
Note You need to log in before you can comment on or make changes to this bug.