Address unsafe cast warnings under Source/WebCore/bindings https://bugs.webkit.org/show_bug.cgi?id=306078

Reviewed by Anne van Kesteren.

* Source/JavaScriptCore/runtime/TypedArrayController.h:
(JSC::TypedArrayController::isWebCoreTypedArrayController const):
* Source/WebCore/SaferCPPExpectations/MemoryUnsafeCastCheckerExpectations:
* Source/WebCore/bindings/js/JSDOMGlobalObject.cpp:
(WebCore::JSDOMGlobalObject::canCompileStrings):
(WebCore::JSDOMGlobalObject::trustedScriptStructure):
* Source/WebCore/bindings/js/JSDOMWindowBase.cpp:
(WebCore::JSDOMWindowBase::supportsRichSourceInfo):
(WebCore::JSDOMWindowBase::shouldInterruptScript):
(WebCore::JSDOMWindowBase::shouldInterruptScriptBeforeTimeout):
(WebCore::JSDOMWindowBase::javaScriptRuntimeFlags):
(WebCore::JSDOMWindowBase::queueMicrotaskToEventLoop):
(WebCore::JSDOMWindowBase::currentScriptExecutionOwner):
(WebCore::JSDOMWindowBase::reportViolationForUnsafeEval):
* Source/WebCore/bindings/js/JSDOMWindowCustom.h:
(WebCore::asJSDOMWindow):
* Source/WebCore/bindings/js/JSDOMWrapperCache.h:
(WebCore::wrapperOwner):
* Source/WebCore/bindings/js/JSWindowProxy.h:
* Source/WebCore/bindings/js/JSWorkerGlobalScopeBase.cpp:
(WebCore::JSWorkerGlobalScopeBase::queueMicrotaskToEventLoop):
* Source/WebCore/bindings/js/WebCoreTypedArrayController.h:
(isType):

Canonical link: https://commits.webkit.org/306070@main