Source/JavaScriptCore/runtime/TypedArrayController.h
@@ -43,6 +43,8 @@ public:
     virtual JSArrayBuffer* toJS(JSGlobalObject*, JSGlobalObject*, ArrayBuffer*) = 0;
     virtual void registerWrapper(JSGlobalObject*, ArrayBuffer*, JSArrayBuffer*) = 0;
     virtual bool isAtomicsWaitAllowedOnCurrentThread() = 0;
+
+    virtual bool isWebCoreTypedArrayController() const { return false; }
 };
 
 } // namespace JSC
