Source/WebCore/bindings/js/WebCoreTypedArrayController.h
@@ -27,6 +27,7 @@
 
 #include <JavaScriptCore/TypedArrayController.h>
 #include <JavaScriptCore/WeakHandleOwner.h>
+#include <wtf/TypeCasts.h>
 
 namespace JSC {
 class WeakHandleOwner;
@@ -46,6 +47,8 @@ public:
     JSC::WeakHandleOwner* wrapperOwner() { return &m_owner; }
 
 private:
+    bool isWebCoreTypedArrayController() const final { return true; }
+
     class JSArrayBufferOwner : public JSC::WeakHandleOwner {
     public:
         bool isReachableFromOpaqueRoots(JSC::Handle<JSC::Unknown>, void* context, JSC::AbstractSlotVisitor&, ASCIILiteral*) override;
@@ -57,3 +60,7 @@ private:
 };
 
 } // namespace WebCore
+
+SPECIALIZE_TYPE_TRAITS_BEGIN(WebCore::WebCoreTypedArrayController)
+    static bool isType(const JSC::TypedArrayController& controller) { return controller.isWebCoreTypedArrayController(); }
+SPECIALIZE_TYPE_TRAITS_END()
